# file-commander

./: .gitignore  README.md  custom_input.py  directory_display.py  main.py  pyproject.toml  test.css
src/: custom_input.py  directory_display.py  main.py
