[tool.poetry]
name = "file-commander"
version = "0.1.0"
description = ""
authors = ["Thibauld Croonenborghs <croonenborghsthibauld@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.scripts]
fcommander = 'src.main:main'

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
